feat: add wallet avatar and balance for wallets setup page

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts-gl": "^1.1.1",
     "echarts-liquidfill": "^2.0.2",
     "enquire-js": "^0.2.1",
+    "ethereum-blockies-base64": "^1.0.2",
     "highcharts-exporting": "^0.1.7",
     "highcharts-more": "^0.1.7",
     "json-format": "^1.0.1",
@@ -30,6 +31,7 @@
     "qs": "^6.7.0",
     "rc-tween-one": "^2.3.0",
     "react-adsense": "^0.0.6",
+    "react-blockies": "^1.4.1",
     "react-countup": "^4.1.0",
     "react-draft-wysiwyg": "^1.13.0",
     "react-helmet": "^5.2.0",
