feat: add tasks card

--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "now-build": "umi build",
     "lint:js": "eslint --ext .js src",
     "lint:style": "stylelint \"src/**/*.less\" --syntax less",
-    "start": "umi dev",
+    "start": "NODE_ENV=development umi dev",
     "test": "cross-env BABELRC=none umi test",
     "prettier": "prettier --write 'src/**/*.{js,less}'",
     "precommit": "lint-staged",
