--- a/examples/cql-github-oauth/public/manifest.json
+++ b/examples/cql-github-oauth/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "CovenantSQL Cloud",
+  "name": "CovenantSQL Cloud",
   "icons": [
     {
       "src": "favicon.ico",
