--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "babel-plugin-import": "^1.10.0",
     "babel-plugin-macros": "^2.5.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "commitizen": "^3.1.1",
     "cross-env": "^5.2.0",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.15.0",
     "eslint-config-react-app": "^3.0.5",
     "eslint-plugin-flowtype": "^3.6.0",
@@ -80,6 +82,12 @@
       "git add"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook"
+    }
+  },
   "lingui": {
     "fallbackLocale": "en",
     "sourceLocale": "en",
@@ -106,10 +114,14 @@
     "start": "NODE_ENV=development umi dev",
     "test": "cross-env BABELRC=none umi test",
     "prettier": "prettier --write 'src/**/*.{js,less}'",
-    "precommit": "lint-staged",
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
     "trans": "lingui extract --clean && node ./scripts/translate.js",
     "doc": "docsify serve docs"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
