refactor: to CQL Cloud

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Covenant Cloud",
+  "name": "CQL Cloud",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#fff",
